hphp/hack/test/typecheck/constraints/where_clause.php.like_types.exp
File "where_clause.php", line 32, characters 16-24:
A 'where' type constraint is violated here (Typing[4110])
File "where_clause.php", line 22, characters 19-27:
This is the method with 'where' type constraints
File "where_clause.php", line 22, characters 29-34:
Some type constraint(s) are violated here
File "where_clause.php", line 22, characters 29-34:
Tcorge is a constrained type parameter
File "where_clause.php", line 23, characters 15-25:
Expected Bar<[unresolved]>
File "where_clause.php", line 22, characters 29-34:
But got dynamic
File "where_clause.php", line 32, characters 12-28:
Invalid return type (Typing[4110])
File "where_clause.php", line 22, characters 29-34:
Some type constraint(s) are violated here
File "where_clause.php", line 22, characters 29-34:
Tcorge is a constrained type parameter
File "where_clause.php", line 31, characters 42-49:
Expected Bar<~Foo>
File "where_clause.php", line 22, characters 29-34:
But got dynamic
